replaces new Integer(n) with Integer.valueOf(n)